tests/paczka1/small_fuzzy/67087493.err
Error in line 4: QSdJzznTP S490 7,7
Error in line 10: OK A243 25,2
Error in line 11: GnNyg3Q0N A243 81,9
Error in line 6: J7x57JZAG S633 58,8
Error in line 15: QSdJzznTP A929 35,92
Error in line 16: fSqO8qKS1ul S633 80,3
